--- a/src/php05/index.html
+++ b/src/php05/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <H1>Hellow World!</H1>
-    <p>このファイルに記載するものはなんでも良いです。</p>
+    <p>このファイルに記載するものはなんでも良いです</p>
     
 </body>
 </html>
