--- a/src/php05/index.html
+++ b/src/php05/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hellow World!</title>
+    <title>Document</title>
 </head>
 <body>
     <H1>Hellow World!</H1>
-    <p>このファイルに記載するものはなんでも良いです</p>
-    
+      <p>このファイルに記載するものはなんでも良いです。</p>
 </body>
 </html>
