--- a/src/php05/index.html
+++ b/src/php05/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,6 @@
 </head>
 <body>
     <H1>Hellow World!</H1>
-      <p>このファイルに記載するものはなんでも良いです。</p>
+      <p>このファイルに記載するものはなんでも良いです</p>
 </body>
 </html>
